--- a/docs/readme
+++ b/docs/readme
@@ -6,3 +6,7 @@ database improvements
     were missing international/departure for filtering
   consistent naming between tables
   scraped at time is in utc and updated time in the api is pkt so need to make all same
+  scraping needs to be
+    consistent
+    more frequent closer to flights
+  flights that have terminated like departed, arrived, cancelled or those that are no longer in the database should be marked as no more checking needed
