--- a/docs/readme
+++ b/docs/readme
@@ -9,4 +9,11 @@ database improvements
   scraping needs to be
     consistent
     more frequent closer to flights
-  flights that have terminated like departed, arrived, cancelled or those that are no longer in the database should be marked as no more checking needed
+  flights that have terminated like departed, arrived, cancelled or those that are no longer in the database should be marked as no more checking needed. call dropped flights dropped
+
+add a way to name a search like abus flight
+add notifications for changes in flight or batch of flights
+batch upsert when getting new flights into database
+add a flight tracker eventually
+  or price experimentations. whats a reasonable window to buy in. week earlier etc
+recent searches not showing when page refreshed
